# ghci-hexcalc

./: ChangeLog.md  README.md  ghci-hexcalc.cabal  stack.yaml
example/: example.ghci
src/Data/: GHex.hs
test/: Spec.hs
