name:                ghci-hexcalc
version:             0.1.1.0
synopsis:            GHCi as a Hex Calculator interactive
description:
  This package defines operations for an interactive hex-caluclator using GHCi.
  This is a simple and casual interactive tool like Perl and Excel
  for daily work.
homepage:            https://github.com/takenobu-hs/ghci-hexcalc
license:             BSD3
license-file:        LICENSE
author:              Takenobu Tani
maintainer:          takenobu.hs@gmail.com
copyright:           2018 Takenobu Tani
category:            Data
build-type:          Simple
tested-with:         GHC==8.6.5, GHC==8.4.3
extra-source-files:  ChangeLog.md,
                     README.md,
                     example/example.ghci
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/takenobu-hs/ghci-hexcalc.git

library
  exposed-modules:     Data.GHex
  other-extensions:    GeneralizedNewtypeDeriving,
                       BangPatterns,
                       BinaryLiterals
  build-depends:       base >=4.7 && <5,
                       binary
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test-ghci-hexcalc
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.7 && <5,
                       binary,
                       doctest,
                       QuickCheck,
                       ghci-hexcalc
  default-language:    Haskell2010
